--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
+    "daisyui": "^2.13.4",
     "postcss": "^8.4.12",
     "svelte": "^3.44.0",
     "tailwindcss": "^3.0.23"
